K8s/hand-ons/nginx-apiserver-redis-postgres/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    name: demo
